--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
             <nav class="navbar navbar-expand-lg navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">SINERGIA</a>
+              <a class="navbar-brand" href="#"><img src="/ASSETS/SINERGIA (6).png" class="imgnav"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav navletras ">
+                <div class="navbar-nav">
                   <a class="colortexto nav-link navletra" aria-current="page" href="#">INICIO</a>
                   <a class="colortexto nav-link navletra" href="#">ASESORÍA LABORAL</a>
                   <a class="colortexto nav-link navletra" href="#">SECTOR EMPRESAS</a>
@@ -73,8 +73,8 @@
                       <div class="col-12 col-md-4">
 
                           <!-- Logo Grupo -->
-                          <a href="/ASSETS/LogoSinergia.jpeg" class="d-flex justify-content-center"><img
-                                  class="centrado-logo-footer" src="/ASSETS/LogoSinergia.jpeg" alt="Logo-Grupo"
+                          <a href="/ASSETS/SINERGIA (5).png" class="d-flex justify-content-center"><img
+                                  class="centrado-logo-footer" src="/ASSETS/SINERGIA (5).png" alt="Logo-Grupo"
                                   width="60px height 60px"></a>
 
                       </div>
