--- a/index.html
+++ b/index.html
@@ -27,13 +27,39 @@
             </div>
           </nav>  
     </header>
-    <main class="portada">
+    <main>
+      <div class="carrusel">
+      <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/ASSETS/38917101.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/ASSETS/engranajes1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="/ASSETS/lupaseleccion1.png"  class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+      <div class="portada"> 
         <div class="box">
+
            <h2>SINERGIA</h2>
            <P> Buscamos el trabajo en conjunto, la esencia del liderazgo transformador. </P>
            
             <P>La verdadera puesta a prueba y manifestación de todos los hábitos laborales reunidos.</P>
         </div>
+      </div> 
         <hr>
     </main>
    <section>
